--- a/Server/Website/Diplomarbeit/website/templates/multiChoiseQuiz.html
+++ b/Server/Website/Diplomarbeit/website/templates/multiChoiseQuiz.html
@@ -79,7 +79,7 @@
 <div id="correctAnswersCount" style="text-align: center; font-size: 18px; margin-bottom: 10px"></div>
 
 <!-- Buttons for selecting the answer -->
-<div style="margin-bottom: 53px; text-align: center;"> 
+<div style="margin-bottom: 20%; text-align: center;"> 
     {% for i in laender %}
         {% set filename = i.split("/")[-1] %}
         {% set filename_without_extension = filename.split(".")[0] %}
