--- a/Server/Website/Diplomarbeit/website/templates/serverQuiz.html
+++ b/Server/Website/Diplomarbeit/website/templates/serverQuiz.html
@@ -116,7 +116,7 @@
     <div id="point_count"></div>
 
     <!-- Form fields for flags -->
-    <div class="quizForm">
+    <div class="quizForm" style="margin-bottom: 15px">
         {% for i in country_data %}
             {% set path = '/flags/'+i+'.png' %}
             <div class="flag-container">
