--- a/Server/Website/Diplomarbeit/website/templates/singleFlagNameQuiz.html
+++ b/Server/Website/Diplomarbeit/website/templates/singleFlagNameQuiz.html
@@ -54,7 +54,7 @@
 </div>
 
 <!-- User answer input field -->
-<input type="text" id="input" onkeydown="handleKeyDown(event)" style="margin-bottom: 70px">
+<input type="text" id="input" onkeydown="handleKeyDown(event)" style="margin-bottom: 20%">
 
 <!-- JavaScript code for quiz logic -->
 <script>
