--- a/Server/Website/Diplomarbeit/website/templates/twoFlagsQuiz.html
+++ b/Server/Website/Diplomarbeit/website/templates/twoFlagsQuiz.html
@@ -59,7 +59,7 @@
 </div>
 
 <!-- Display for the current quiz question -->
-<p style="text-align: center; font-size: 21px; margin-bottom: 97px;">{{session["quiz_count"]}}/5</p>
+<p style="text-align: center; font-size: 21px; margin-bottom: 20%;">{{session["quiz_count"]}}/5</p>
 
 <!-- JavaScript code for quiz logic -->
 <script>
