--- a/Server/Website/Diplomarbeit/website/templates/base.html
+++ b/Server/Website/Diplomarbeit/website/templates/base.html
@@ -107,7 +107,7 @@
     <div class="container-fluid">
         <div class="collapse navbar-collapse justify-content-start">
             <!-- Logo/Bild inside the Navbar -->
-            <a class="navbar-brand mt-2 mt-lg-0" href="homepage">
+            <a class="navbar-brand mt-2 mt-lg-0" href="auth.homepage">
                 <img
                     src="{{ url_for('auth.show_pic') }}" 
                     width="60px" 
