--- a/Server/Website/Diplomarbeit/website/templates/base.html
+++ b/Server/Website/Diplomarbeit/website/templates/base.html
@@ -107,14 +107,25 @@
     <div class="container-fluid">
         <div class="collapse navbar-collapse justify-content-start">
             <!-- Logo/Bild inside the Navbar -->
-            <a class="navbar-brand mt-2 mt-lg-0" href="auth.homepage">
-                <img
-                    src="{{ url_for('auth.show_pic') }}" 
-                    width="60px" 
-                    height="50px"
-                    style="border-radius: 7px; margin-left: 20px;"
-                />
-            </a>
+            {% if user.is_authenticated == false %}
+                <a class="navbar-brand mt-2 mt-lg-0" href="#">
+                    <img
+                        src="{{ url_for('auth.show_pic') }}" 
+                        width="60px" 
+                        height="50px"
+                        style="border-radius: 7px; margin-left: 20px;"
+                    />
+                </a>
+            {% else %}
+                <a class="navbar-brand mt-2 mt-lg-0" href="auth.homepage">
+                    <img
+                        src="{{ url_for('auth.show_pic') }}" 
+                        width="60px" 
+                        height="50px"
+                        style="border-radius: 7px; margin-left: 20px;"
+                    />
+                </a>
+            {% elif %}
 
             <!-- Navigationlinks -->
             <ul class="navbar-nav" style="margin-left: 25%">
